to display selected city or state

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <!-- <li>Filter for City</li> 
                 <li>or state </li> -->
           </ul>
+
+          <p class="displayField"></p>
         </form>
       </div>
     </section>
@@ -101,8 +103,8 @@
       </div>
 
       <p class="copyrht">
-        Copyright &copy; All Right Reserved &trade; 2021 | Powered by:
-        @Oluwafemi ZionHilT | Privacy Poliicy | FAQ
+        Copyright &copy; All Right Reserved &trade; 2022 | Powered by:
+        @Oluwafemi ZionHilT
       </p>
     </footer>
 
